public/css/index.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");

:root {
    --background-color: #27272a;
    --secondary-color: #3f3f46;
    --text-color: #f8fafc;
    --text-header-color: #cbd5e1;
    --text-font: "Open Sans";
    --text-active: #9ca3af;
    --text-error: #dc2626;
    --button-radius: 8px;
    --box-shadow: 2px 10px 18px -3px rgba(0, 0, 0, 0.29);
}

html {
    background-color: var(--background-color);
    font-family: var(--text-font);
    color: var(--text-color);
}

a {
    text-decoration: none;
}

button {
    border: none;
}

.signup-form,
.login-form,
.membership-form {
    width: 25%;
    display: flex;
    flex-direction: column;
    padding: 2rem 2rem 4rem 2rem;
    margin: 0 auto;
    transform: translateY(10vh);
    background-color: var(--secondary-color);
    box-shadow: var(--box-shadow);

    li,
    p {
        font-size: 10px;
        text-align: center;
    }

    ul {
        padding: 0;
    }

    li {
        list-style-type: none;
        margin-bottom: 6px;
    }

    h2 {
        margin: 0 0 2rem 0;
        align-self: center;
        font-size: 1.4rem;
    }

    label {
        margin-bottom: 6px;
        font-size: 14px;
    }

    input {
        padding: 8px;
        margin-bottom: 1rem;
        border: none;
        background-color: var(--background-color);
        color: white;
    }

    span {
        color: var(--text-error);
        font-size: 10px;
    }

    button {
        padding: 8px;
        border: none;
        font-size: 16px;
        font-weight: 600;
        color: var(--text-color);
        background-color: #6366f1;
        cursor: pointer;
    }

    button:hover {
        background-color: #3730a3;
    }

    a {
        margin-top: 1rem;
        font-size: 12px;
        color: #0284c7;
    }

    a:hover {
        text-decoration: underline;
    }
}

.btn-container {
    display: flex;
    justify-content: flex-end;
}

.signup-btn,
.login-btn,
.logout-btn {
    width: 3%;
    padding: 6px;
    margin-top: 5px;
    border-radius: var(--button-radius);
    font-family: var(--text-font);
    font-size: 13px;
    font-weight: 600;
    text-align: center;
    background-color: transparent;
    color: var(--text-color);
    cursor: pointer;
}

.logout-btn {
    width: 100%;
    padding: 8px;
}

.signup-btn {
    margin: 5px 10px 0 auto;
    background-color: #15803d;
}

.login-btn,
.logout-btn {
    border: solid 2px var(--secondary-color);
}

.signup-btn:hover,
.login-btn:hover,
.logout-btn:hover {
    color: var(--text-active);
}

.messages-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
    margin-top: 4rem;
}

.message-card {
    width: 40%;
    padding: 1rem;
    border-radius: 12px;
    font-family: var(--text-font);
    color: var(--text-color);
    background-color: var(--secondary-color);
    box-shadow: var(--box-shadow);

    > div {
        display: flex;

        img {
            width: 64px;
            height: 64px;
        }

        p {
            margin: 0 0 0 8px;
        }

        p:first-of-type {
            margin-top: 5px;
        }

        p:nth-of-type(2) {
            font-size: 11px;
        }
    }

    > h3 {
        font-style: italic;
        font-size: 1.5rem;
        color: var(--text-header-color);
    }

    > p {
        font-size: 1rem;
    }
}

